# axi4

./: .gitignore  README.md  blarney-axi4.cabal  readme.adoc
example/manager_subordinate/: Main.hs  Makefile
src/Blarney/: AXI4.hs  AXI4CommonTypes.hs  AXI4TypesCommon.hs
src/Blarney/AXI4/: BasicUtils.hs  Fields.hs  Flits.hs  Interfaces.hs  Types.hs  Utils.hs
src/Blarney/AXI4/Utils/: AR.hs  Basics.hs  BufferShim.hs
tests/Blarney/AXI4/: Tests.hs
tests/Blarney/AXI4/Tests/: PIO.hs
