cabal-version: 2.4
name: blarney-axi4
version: 0.1.0.0

flag enable-namer-plugin
  description: Enable namer plugin
  manual: True
  default: False

library
  hs-source-dirs: src
  exposed-modules:
    Blarney.AXI4
    Blarney.AXI4.Utils.BufferShim
  other-modules:
    Blarney.AXI4.Flits
    Blarney.AXI4.Fields
    Blarney.AXI4.Interfaces
  build-depends:
      base
    , blarney
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    OverloadedLabels
    PartialTypeSignatures
    RebindableSyntax
    RecordWildCards
    RecursiveDo
    TypeFamilies
  ghc-options:
    -Wno-partial-type-signatures
  if flag(enable-namer-plugin)
    build-depends:
      blarney-plugins-namer
    ghc-options:
      -fplugin BlarneyPlugins.Namer
