cabal-version: 3.0
name: blarney-axi4
version: 0.1.0.0

flag enable-namer-plugin
  description: Enable namer plugin
  manual: True
  default: False

common blarney-axi4-opts
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    OverloadedLabels
    PartialTypeSignatures
    RebindableSyntax
    RecordWildCards
    RecursiveDo
    TypeFamilies
  ghc-options:
    -Wno-partial-type-signatures
  if flag(enable-namer-plugin)
    build-depends:
      blarney-plugins-namer
    ghc-options:
      -fplugin BlarneyPlugins.Namer
  build-depends:
      base
    , blarney

library
  import: blarney-axi4-opts
  hs-source-dirs: src
  exposed-modules:
    Blarney.AXI4
    Blarney.AXI4.Utils.BufferShim
  other-modules:
    Blarney.AXI4.Flits
    Blarney.AXI4.Fields
    Blarney.AXI4.Interfaces

test-suite blarney-axi4-tests
  import: blarney-axi4-opts
  type: exitcode-stdio-1.0
  main-is: Blarney/AXI4/Tests.hs
  hs-source-dirs: tests
  other-modules: Blarney.AXI4.Tests.PIO
  build-depends: blarney-axi4
